# routes/index.js
@@ -3,6 +3,6 @@ const router = express.Router();
 
 router.use('/', require('./swagger.js'));
 router.use('/recipes', require('./recipes'));
-router.use('./users', require('./users'))
+router.use('/users', require('./users'))
 
 module.exports = router;
