# routes/users.js
@@ -2,6 +2,7 @@ const routes = require('express').Router();
 
 const usersController = require('../controllers/users')
 
+routes.get('/', usersController.getAllUsers)
 routes.get('/:username', usersController.getUser);
 routes.post('/', usersController.createUser);
 routes.put('/:username', usersController.updateUser);
